# IntelAI

./: .dockerignore  .env.example  .gitignore  .railwayignore  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  Makefile  README.md  STRATEGY.md  STRATEGY_DOC.md  TODO.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  generate_enhanced_dataset.py  main.py  openapi.json  openapi.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  setup-new-laptop.sh  steps.md
db/: schema.sql
docs/: BENCHMARKING_DATA_GUIDE.md  BUGS_AND_FIXES.md  DATA_INGESTION_UI_GUIDE.md  DATA_INGESTION_UI_SUMMARY.md  FIX_LIGHTNING_STUDIO.md  INTELAI_DOCUMENTATION_UPDATE_SUMMARY.md  INTELAI_FILE_MIGRATION_SUMMARY.md  INTELAI_FINAL_SUMMARY.md  INTELAI_FINAL_UPDATE_SUMMARY.md  INTELAI_PRESENTATION_CHECKLIST.md  OMNISMART_INTEGRATION_GUIDE.md  PRESENTATION_READINESS_REPORT.md  STRATEGY_DRIFT_AUDIT.md
drafts/: README.md  blog_post_1_persona_rag.md  demo_script.md  preprint_persona_routed_rag.md  upwork_proposal_templates.md
frontend/: .dockerignore  Dockerfile  dev-nginx.conf  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js
migrations/: 004_add_token_refresh_support.sql  005_add_kpi_entities.sql
monitoring/: alert_rules.yml  prometheus.yml
n8n_workflows/: clickup_task.json  drive_upload.json  gmail_alert.json  sheets_push.json
nginx/: dev_proxy.conf
scripts/: automation_e2e.py  check_git_simple.sh  check_git_status.sh  cleanup_deep.sh  full_a2z_verification.py  (+11 more)
(+178 files in other folders)
