# Top-level project metadata for IntelAI (the deployable app).
# The app runs via uvicorn (see Dockerfile / railway.toml); deps are in requirements.txt.
# The reusable persona library is packaged separately under packages/omnismart-personas.
[project]
name = "intelai"
version = "0.1.0"
description = "Persona-Aware AI Analytics & RAG Copilot — multi-domain KPI intelligence, GraphRAG-lite, ML forecasting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yacine" }]
keywords = ["rag", "personas", "analytics", "kpi", "fastapi", "graphrag", "llm"]

[project.urls]
Homepage = "https://github.com/Yacine-ai-tech/IntelAI"
Source = "https://github.com/Yacine-ai-tech/IntelAI"

# pytest config lives in pytest.ini (testpaths=tests, e2e excluded).
